# Embedded-AI-For-Predictive-Maintenance

./: CMakeLists.txt  README.md  prj.conf  sample.yaml
data/: autoencoder.tflite  simulate_data.py
data/machine_1/: machine_1_pressure.csv  machine_1_temp.csv
data/machine_2/: machine_2_pressure.csv
data/simulated_data 2/machine_1/: machine_1_vibration.csv
data/simulated_data 2/machine_3/: machine_3_temp.csv
data/simulated_data/machine_2/: machine_2_temp.csv
include/: autoencoder_model.h  sensor.h  sensor_wrapper.h  tflite_wrapper.h
src/: autoencoder_model.cc  main.c  sensor.cpp  sensor_wrapper.cpp  tflite_wrapper.cpp
